# dev

./: README.md  constants.py  coolwarm_dvs.cpt  coolwarm_geoid.cpt  cpt.py  create_viscosity_profiles.py  dev.py  env.yml  interp.py  kernel.py  main.py  plot_kernels.py  polar_geoid.cpt  process.py  read_in.py  read_in_nc.py  shell.py
TomoModel/: CMakeLists.txt  README.md
TomoModel/data/: prem.simp.vm1
TomoModel/spherical_harmonics/: S20RTS_custom_format.py  main.py  process.py  test.py  validation.py
TomoModel/src/: CMakeLists.txt  ReadS20RTS.f90  gll_library.f90  module_fourier.f90  module_function.f90  module_model.f90  module_spline.f90  module_util.f90  nrtype.f90  nrutil.f90  prott.f  rsple.f  rspln.f
cpts/: coolwarm_DT.cpt  polar_DT.cpt  polar_dvs.cpt
heat flow/: main.py
kernels/lyness/: 01_topography_kernels_Paper_withviscosity.gmt  Makefile  README  commpi.mod  constants.mod  depth.final  f1dim_mod.mod  nr.mod  nrutil.mod  ref_flds.mod  sph_tools.mod  util.mod
lyness/: MAKE_KERNEL  README  commpi.mod  constants.mod  f1dim_mod.mod  nr.mod  nrtype.mod  nrutil.mod  ref_flds.mod  sph_tools.mod  util.mod
lyness/OUTPUT_F10b/: viscosity_profile.vis
lyness/OUTPUT_L98/: viscosity_profile.vis
lyness/OUTPUT_MF97/: viscosity_profile.vis
lyness/OUTPUT_njwprac_1/: viscosity_profile.vis
lyness/OUTPUT_njwprac_3/: viscosity_profile.vis
lyness/OUTPUT_njwprac_4/: viscosity_profile.vis
lyness/OUTPUT_upperlower_visc/: viscosity_profile.vis
lyness/VISC_INPUTS/: C95.vis  C95_2.vis  F10a.vis  (+27 more)
observation/: dev.py  main.py  parse_res_depths.py  process.py
(+6577 files in other folders)
